# FilmeOOP

./: ActiuneUndo.cpp  ActiuneUndo.h  CMakeLists.txt  ClasaNoua.cpp  ClasaNoua.h  ClasaProprieLista.cpp  ClasaProprieLista.h  Cos.cpp  Cos.h  CosGUI.cpp  CosGUI.h  CosReadOnly.cpp  CosReadOnly.h  Errors.h  Film.cpp  Film.h  FilmeGUI.cpp  FilmeGUI.h  Login.cpp  Login.h  MyVector.cpp  Observer.cpp  README.md  Repo.cpp  Repo.h  Service.cpp  Service.h  TableModel.cpp  TableModel.h  Ui.cpp  Ui.h  UserModeGui.cpp  UserModeGui.h  Validator.cpp  Validator.h  main.cpp  stocare.txt  vector.h
Tests/: teste.cpp  teste.h
